tests/NormalTests/paczka1/fuzzy1/64353653.err
Error in line 6: iZ8ap A679 7,1
Error in line 7: iZ8ap A639 42,7
Error in line 16: RVLB S469 64,6
Error in line 13: izl S469 5,7
Error in line 20: RVLB A342 95,8
Error in line 29: iZ8ap S469 56,2
